--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab deleniti perspiciatis ea itaque ratione dolorem ad fuga quidem nam quibusdam distinctio aliquid voluptatibus voluptatem at dolor, doloribus dolore mollitia officiis!</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab deleniti perspiciatis ea itaque ratione dolorem ad fuga quidem nam quibusdam distinctio aliquid voluptatibus voluptatem at dolor, doloribus dolore mollitia officiis!</p>
+    <p><b>Legal</b></p>
 </body>
 </html>
